--- a/assets/style.css
+++ b/assets/style.css
@@ -126,6 +126,17 @@ header a:hover {
     font-size: 20px;
 
 }
+
+.screen-tenant-btns{
+    background-color: #e67e22;
+    color: white;
+    padding: 7px 15px;
+    border: none;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 12px;
+
+}
 .securty-img{
     width: 300px;
     margin: auto;
