--- a/assets/style.css
+++ b/assets/style.css
@@ -301,6 +301,57 @@ img {
 }
 
 
+.background-grey{
+    background: #f1f1f1;
+    padding: 80px ;
+    color: #707070;
+}
+
+.background-grey p{
+    /* width: 50%; */
+    margin: auto;
+    text-align: center;
+    max-width: 659px;
+    line-height: 25px;
+
+}
+
+.containers {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    justify-content: space-around;
+    height: 300px; 
+    overflow: hidden; 
+    align-items: center;
+
+}
+
+.text {
+    width: 50%;
+    margin: auto;
+}
+
+.text h2{
+    margin: 10px 0;
+}
+
+.text p{
+    color: #666;
+    line-height: 25px;
+
+}
+
+
+
+.img {
+    max-width: 100%;
+    height: 300px;
+    width: 100%;
+    object-fit: cover;
+    object-position: top;
+}
+
 
 @media (max-width: 1000px) {
 .hero-section-tex{
